Phase3/parser.output
Nonterminals useless in grammar

    break_statement
    continue_statement
    whileblock
    forblock


Rules useless in grammar

  103 whileblock: TOK_L_CURLY_BR statements TOK_R_CURLY_BR

  104 forblock: TOK_L_CURLY_BR statements TOK_R_CURLY_BR


State 104 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statements statement
    2        | ε

    3 statement: expression TOK_SEMICOLON
    4          | if_statement
    5          | ifelse_statement
    6          | while_statement
    7          | for_statement
    8          | return_statement
    9          | TOK_BREAK TOK_SEMICOLON
   10          | TOK_CONTINUE TOK_SEMICOLON
   11          | block
   12          | funcdef
   13          | TOK_SEMICOLON
   14          | error TOK_SEMICOLON

   15 statements: statements statement
   16           | ε

   17 M: ε

   18 assignexpr: lvalue TOK_ASSIGN expression

   19 expression: assignexpr
   20           | expression TOK_PLUS expression
   21           | expression TOK_MINUS expression
   22           | expression TOK_MULTIPLY expression
   23           | expression TOK_DIVIDE expression
   24           | expression TOK_MODULO expression
   25           | expression TOK_GREATER expression
   26           | expression TOK_LESS expression
   27           | expression TOK_GR_EQUAL expression
   28           | expression TOK_LS_EQUAL expression
   29           | expression TOK_EQUAL expression
   30           | expression TOK_N_EQUAL expression

   31 $@1: ε

   32 expression: expression TOK_AND $@1 M expression

   33 $@2: ε

   34 expression: expression TOK_OR $@2 M expression
   35           | term

   36 term: TOK_L_PARENTH expression TOK_R_PARENTH
   37     | TOK_MINUS expression
   38     | TOK_NOT expression
   39     | TOK_DBL_PLUS lvalue
   40     | lvalue TOK_DBL_PLUS
   41     | TOK_DBL_MINUS lvalue
   42     | lvalue TOK_DBL_MINUS
   43     | primary

   44 primary: lvalue
   45        | call
   46        | objectdef
   47        | TOK_L_PARENTH funcdef TOK_R_PARENTH
   48        | const

   49 lvalue: TOK_ID
   50       | TOK_LOCAL TOK_ID
   51       | TOK_DBL_COLON TOK_ID
   52       | member

   53 member: lvalue TOK_DOT TOK_ID
   54       | lvalue TOK_L_BR expression TOK_R_BR
   55       | call TOK_DOT TOK_ID
   56       | call TOK_L_BR expression TOK_R_BR

   57 call: call normcall
   58     | lvalue callsuffix
   59     | TOK_L_PARENTH funcdef TOK_R_PARENTH normcall

   60 callsuffix: normcall
   61           | methodcall

   62 normcall: TOK_L_PARENTH elist TOK_R_PARENTH

   63 methodcall: TOK_DBL_DOT TOK_ID normcall

   64 elist: elist TOK_COMMA expression
   65      | expression
   66      | ε

   67 indexedelem: TOK_L_CURLY_BR expression TOK_COLON expression TOK_R_CURLY_BR

   68 indexed: indexedelem
   69        | indexed TOK_COMMA indexedelem

   70 objectdef: TOK_L_BR elist TOK_R_BR
   71          | TOK_L_BR indexed TOK_R_BR

   72 $@3: ε

   73 block: TOK_L_CURLY_BR $@3 statements TOK_R_CURLY_BR

   74 funcdef_block: TOK_L_CURLY_BR statements TOK_R_CURLY_BR

   75 funcname: TOK_ID

   76 funcprefix: TOK_FUNCTION funcname
   77           | TOK_FUNCTION

   78 funcargs: TOK_L_PARENTH idlist TOK_R_PARENTH

   79 funcbody: funcdef_block

   80 funcdef: funcprefix funcargs funcbody

   81 const: TOK_INT
   82      | TOK_FLOAT
   83      | TOK_STRING
   84      | TOK_NIL
   85      | TOK_TRUE
   86      | TOK_FALSE

   87 idlist: TOK_ID
   88       | idlist TOK_COMMA TOK_ID
   89       | ε

   90 ifprefix: TOK_IF TOK_L_PARENTH expression TOK_R_PARENTH

   91 elseprefix: TOK_ELSE

   92 if_statement: ifprefix statement

   93 ifelse_statement: ifprefix statement elseprefix statement

   94 whilestart: TOK_WHILE

   95 whilecond: TOK_L_PARENTH expression TOK_R_PARENTH

   96 while_statement: whilestart whilecond statement

   97 N: ε

   98 M1: ε

   99 forprefix: TOK_FOR TOK_L_PARENTH elist TOK_SEMICOLON M1 expression TOK_SEMICOLON

  100 for_statement: forprefix N elist TOK_R_PARENTH N statement N

  101 return_statement: TOK_RETURN TOK_SEMICOLON
  102                 | TOK_RETURN expression TOK_SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    error (256) 14
    TOK_IF (258) 90
    TOK_ELSE (259) 91
    TOK_WHILE (260) 94
    TOK_FOR (261) 99
    TOK_FUNCTION (262) 76 77
    TOK_RETURN (263) 101 102
    TOK_BREAK (264) 9
    TOK_CONTINUE (265) 10
    TOK_AND (266) 32
    TOK_NOT (267) 38
    TOK_OR (268) 34
    TOK_LOCAL (269) 50
    TOK_TRUE <intVal> (270) 85
    TOK_FALSE <intVal> (271) 86
    TOK_NIL <strVal> (272) 84
    TOK_ASSIGN (273) 18
    TOK_PLUS (274) 20
    TOK_MINUS (275) 21 37
    TOK_MULTIPLY (276) 22
    TOK_DIVIDE (277) 23
    TOK_MODULO (278) 24
    TOK_EQUAL (279) 29
    TOK_N_EQUAL (280) 30
    TOK_DBL_PLUS (281) 39 40
    TOK_DBL_MINUS (282) 41 42
    TOK_GREATER (283) 25
    TOK_LESS (284) 26
    TOK_GR_EQUAL (285) 27
    TOK_LS_EQUAL (286) 28
    TOK_L_CURLY_BR (287) 67 73 74
    TOK_R_CURLY_BR (288) 67 73 74
    TOK_L_BR (289) 54 56 70 71
    TOK_R_BR (290) 54 56 70 71
    TOK_L_PARENTH (291) 36 47 59 62 78 90 95 99
    TOK_R_PARENTH (292) 36 47 59 62 78 90 95 100
    TOK_SEMICOLON (293) 3 9 10 13 14 99 101 102
    TOK_COMMA (294) 64 69 88
    TOK_COLON (295) 67
    TOK_DBL_COLON (296) 51
    TOK_DOT (297) 53 55
    TOK_DBL_DOT (298) 63
    TOK_ID <strVal> (299) 49 50 51 53 55 63 75 87 88
    TOK_INT <intVal> (300) 81
    TOK_FLOAT <floatVal> (301) 82
    TOK_STRING <strVal> (302) 83
    TOK_UMINUS (303)


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program (50)
        on left: 1 2
        on right: 0
    statement <stmt_struct> (51)
        on left: 3 4 5 6 7 8 9 10 11 12 13 14
        on right: 1 15 92 93 96 100
    statements <stmt_struct> (52)
        on left: 15 16
        on right: 1 15 73 74
    M <unsignedVal> (53)
        on left: 17
        on right: 32 34
    assignexpr <expr> (54)
        on left: 18
        on right: 19
    expression <expr> (55)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 32 34 35
        on right: 3 18 20 21 22 23 24 25 26 27 28 29 30 32 34 36 37 38 54 56 64 65 67 90 95 99 102
    $@1 (56)
        on left: 31
        on right: 32
    $@2 (57)
        on left: 33
        on right: 34
    term <expr> (58)
        on left: 36 37 38 39 40 41 42 43
        on right: 35
    primary <expr> (59)
        on left: 44 45 46 47 48
        on right: 43
    lvalue <expr> (60)
        on left: 49 50 51 52
        on right: 18 39 40 41 42 44 53 54 58
    member <expr> (61)
        on left: 53 54 55 56
        on right: 52
    call <expr> (62)
        on left: 57 58 59
        on right: 45 55 56 57
    callsuffix <call_struct> (63)
        on left: 60 61
        on right: 58
    normcall <call_struct> (64)
        on left: 62
        on right: 57 59 60 63
    methodcall <call_struct> (65)
        on left: 63
        on right: 61
    elist <expr> (66)
        on left: 64 65 66
        on right: 62 64 70 99 100
    indexedelem <indexed> (67)
        on left: 67
        on right: 68 69
    indexed <indexed> (68)
        on left: 68 69
        on right: 69 71
    objectdef <expr> (69)
        on left: 70 71
        on right: 46
    block (70)
        on left: 73
        on right: 11
    $@3 (71)
        on left: 72
        on right: 73
    funcdef_block (72)
        on left: 74
        on right: 79
    funcname <strVal> (73)
        on left: 75
        on right: 76
    funcprefix <symbol> (74)
        on left: 76 77
        on right: 80
    funcargs (75)
        on left: 78
        on right: 80
    funcbody <unsignedVal> (76)
        on left: 79
        on right: 80
    funcdef <expr> (77)
        on left: 80
        on right: 12 47 59
    const <expr> (78)
        on left: 81 82 83 84 85 86
        on right: 48
    idlist <strVal> (79)
        on left: 87 88 89
        on right: 78 88
    ifprefix <unsignedVal> (80)
        on left: 90
        on right: 92 93
    elseprefix <unsignedVal> (81)
        on left: 91
        on right: 93
    if_statement <unsignedVal> (82)
        on left: 92
        on right: 4
    ifelse_statement <unsignedVal> (83)
        on left: 93
        on right: 5
    whilestart <unsignedVal> (84)
        on left: 94
        on right: 96
    whilecond <unsignedVal> (85)
        on left: 95
        on right: 96
    while_statement (86)
        on left: 96
        on right: 6
    N <unsignedVal> (87)
        on left: 97
        on right: 100
    M1 <unsignedVal> (88)
        on left: 98
        on right: 99
    forprefix <forprefix_struct> (89)
        on left: 99
        on right: 100
    for_statement (90)
        on left: 100
        on right: 7
    return_statement (91)
        on left: 101 102
        on right: 8


State 0

    0 $accept: • program $end
    1 program: • statements statement
    2        | ε •  [$end]
   15 statements: • statements statement
   16           | ε •  [error, TOK_IF, TOK_WHILE, TOK_FOR, TOK_FUNCTION, TOK_RETURN, TOK_BREAK, TOK_CONTINUE, TOK_NOT, TOK_LOCAL, TOK_TRUE, TOK_FALSE, TOK_NIL, TOK_MINUS, TOK_DBL_PLUS, TOK_DBL_MINUS, TOK_L_CURLY_BR, TOK_L_BR, TOK_L_PARENTH, TOK_SEMICOLON, TOK_DBL_COLON, TOK_ID, TOK_INT, TOK_FLOAT, TOK_STRING]

    $end      reduce using rule 2 (program)
    $default  reduce using rule 16 (statements)

    program     go to state 1
    statements  go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: statements • statement
    3 statement: • expression TOK_SEMICOLON
    4          | • if_statement
    5          | • ifelse_statement
    6          | • while_statement
    7          | • for_statement
    8          | • return_statement
    9          | • TOK_BREAK TOK_SEMICOLON
   10          | • TOK_CONTINUE TOK_SEMICOLON
   11          | • block
   12          | • funcdef
   13          | • TOK_SEMICOLON
   14          | • error TOK_SEMICOLON
   15 statements: statements • statement
   18 assignexpr: • lvalue TOK_ASSIGN expression
   19 expression: • assignexpr
   20           | • expression TOK_PLUS expression
   21           | • expression TOK_MINUS expression
   22           | • expression TOK_MULTIPLY expression
   23           | • expression TOK_DIVIDE expression
   24           | • expression TOK_MODULO expression
   25           | • expression TOK_GREATER expression
   26           | • expression TOK_LESS expression
   27           | • expression TOK_GR_EQUAL expression
   28           | • expression TOK_LS_EQUAL expression
   29           | • expression TOK_EQUAL expression
   30           | • expression TOK_N_EQUAL expression
   32           | • expression TOK_AND $@1 M expression
   34           | • expression TOK_OR $@2 M expression
   35           | • term
   36 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   37     | • TOK_MINUS expression
   38     | • TOK_NOT expression
   39     | • TOK_DBL_PLUS lvalue
   40     | • lvalue TOK_DBL_PLUS
   41     | • TOK_DBL_MINUS lvalue
   42     | • lvalue TOK_DBL_MINUS
   43     | • primary
   44 primary: • lvalue
   45        | • call
   46        | • objectdef
   47        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   48        | • const
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   70 objectdef: • TOK_L_BR elist TOK_R_BR
   71          | • TOK_L_BR indexed TOK_R_BR
   73 block: • TOK_L_CURLY_BR $@3 statements TOK_R_CURLY_BR
   76 funcprefix: • TOK_FUNCTION funcname
   77           | • TOK_FUNCTION
   80 funcdef: • funcprefix funcargs funcbody
   81 const: • TOK_INT
   82      | • TOK_FLOAT
   83      | • TOK_STRING
   84      | • TOK_NIL
   85      | • TOK_TRUE
   86      | • TOK_FALSE
   90 ifprefix: • TOK_IF TOK_L_PARENTH expression TOK_R_PARENTH
   92 if_statement: • ifprefix statement
   93 ifelse_statement: • ifprefix statement elseprefix statement
   94 whilestart: • TOK_WHILE
   96 while_statement: • whilestart whilecond statement
   99 forprefix: • TOK_FOR TOK_L_PARENTH elist TOK_SEMICOLON M1 expression TOK_SEMICOLON
  100 for_statement: • forprefix N elist TOK_R_PARENTH N statement N
  101 return_statement: • TOK_RETURN TOK_SEMICOLON
  102                 | • TOK_RETURN expression TOK_SEMICOLON

    error           shift, and go to state 4
    TOK_IF          shift, and go to state 5
    TOK_WHILE       shift, and go to state 6
    TOK_FOR         shift, and go to state 7
    TOK_FUNCTION    shift, and go to state 8
    TOK_RETURN      shift, and go to state 9
    TOK_BREAK       shift, and go to state 10
    TOK_CONTINUE    shift, and go to state 11
    TOK_NOT         shift, and go to state 12
    TOK_LOCAL       shift, and go to state 13
    TOK_TRUE        shift, and go to state 14
    TOK_FALSE       shift, and go to state 15
    TOK_NIL         shift, and go to state 16
    TOK_MINUS       shift, and go to state 17
    TOK_DBL_PLUS    shift, and go to state 18
    TOK_DBL_MINUS   shift, and go to state 19
    TOK_L_CURLY_BR  shift, and go to state 20
    TOK_L_BR        shift, and go to state 21
    TOK_L_PARENTH   shift, and go to state 22
    TOK_SEMICOLON   shift, and go to state 23
    TOK_DBL_COLON   shift, and go to state 24
    TOK_ID          shift, and go to state 25
    TOK_INT         shift, and go to state 26
    TOK_FLOAT       shift, and go to state 27
    TOK_STRING      shift, and go to state 28

    statement         go to state 29
    assignexpr        go to state 30
    expression        go to state 31
    term              go to state 32
    primary           go to state 33
    lvalue            go to state 34
    member            go to state 35
    call              go to state 36
    objectdef         go to state 37
    block             go to state 38
    funcprefix        go to state 39
    funcdef           go to state 40
    const             go to state 41
    ifprefix          go to state 42
    if_statement      go to state 43
    ifelse_statement  go to state 44
    whilestart        go to state 45
    while_statement   go to state 46
    forprefix         go to state 47
    for_statement     go to state 48
    return_statement  go to state 49


State 3

    0 $accept: program $end •

    $default  accept


State 4

   14 statement: error • TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 50


State 5

   90 ifprefix: TOK_IF • TOK_L_PARENTH expression TOK_R_PARENTH

    TOK_L_PARENTH  shift, and go to state 51


State 6

   94 whilestart: TOK_WHILE •

    $default  reduce using rule 94 (whilestart)


State 7

   99 forprefix: TOK_FOR • TOK_L_PARENTH elist TOK_SEMICOLON M1 expression TOK_SEMICOLON

    TOK_L_PARENTH  shift, and go to state 52


State 8

   75 funcname: • TOK_ID
   76 funcprefix: TOK_FUNCTION • funcname
   77           | TOK_FUNCTION •  [TOK_L_PARENTH]

    TOK_ID  shift, and go to state 53

    $default  reduce using rule 77 (funcprefix)

    funcname  go to state 54


State 9

   18 assignexpr: • lvalue TOK_ASSIGN expression
   19 expression: • assignexpr
   20           | • expression TOK_PLUS expression
   21           | • expression TOK_MINUS expression
   22           | • expression TOK_MULTIPLY expression
   23           | • expression TOK_DIVIDE expression
   24           | • expression TOK_MODULO expression
   25           | • expression TOK_GREATER expression
   26           | • expression TOK_LESS expression
   27           | • expression TOK_GR_EQUAL expression
   28           | • expression TOK_LS_EQUAL expression
   29           | • expression TOK_EQUAL expression
   30           | • expression TOK_N_EQUAL expression
   32           | • expression TOK_AND $@1 M expression
   34           | • expression TOK_OR $@2 M expression
   35           | • term
   36 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   37     | • TOK_MINUS expression
   38     | • TOK_NOT expression
   39     | • TOK_DBL_PLUS lvalue
   40     | • lvalue TOK_DBL_PLUS
   41     | • TOK_DBL_MINUS lvalue
   42     | • lvalue TOK_DBL_MINUS
   43     | • primary
   44 primary: • lvalue
   45        | • call
   46        | • objectdef
   47        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   48        | • const
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   70 objectdef: • TOK_L_BR elist TOK_R_BR
   71          | • TOK_L_BR indexed TOK_R_BR
   81 const: • TOK_INT
   82      | • TOK_FLOAT
   83      | • TOK_STRING
   84      | • TOK_NIL
   85      | • TOK_TRUE
   86      | • TOK_FALSE
  101 return_statement: TOK_RETURN • TOK_SEMICOLON
  102                 | TOK_RETURN • expression TOK_SEMICOLON

    TOK_NOT        shift, and go to state 12
    TOK_LOCAL      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_FALSE      shift, and go to state 15
    TOK_NIL        shift, and go to state 16
    TOK_MINUS      shift, and go to state 17
    TOK_DBL_PLUS   shift, and go to state 18
    TOK_DBL_MINUS  shift, and go to state 19
    TOK_L_BR       shift, and go to state 21
    TOK_L_PARENTH  shift, and go to state 22
    TOK_SEMICOLON  shift, and go to state 55
    TOK_DBL_COLON  shift, and go to state 24
    TOK_ID         shift, and go to state 25
    TOK_INT        shift, and go to state 26
    TOK_FLOAT      shift, and go to state 27
    TOK_STRING     shift, and go to state 28

    assignexpr  go to state 30
    expression  go to state 56
    term        go to state 32
    primary     go to state 33
    lvalue      go to state 34
    member      go to state 35
    call        go to state 36
    objectdef   go to state 37
    const       go to state 41


State 10

    9 statement: TOK_BREAK • TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 57


State 11

   10 statement: TOK_CONTINUE • TOK_SEMICOLON

    TOK_SEMICOLON  shift, and go to state 58


State 12

   18 assignexpr: • lvalue TOK_ASSIGN expression
   19 expression: • assignexpr
   20           | • expression TOK_PLUS expression
   21           | • expression TOK_MINUS expression
   22           | • expression TOK_MULTIPLY expression
   23           | • expression TOK_DIVIDE expression
   24           | • expression TOK_MODULO expression
   25           | • expression TOK_GREATER expression
   26           | • expression TOK_LESS expression
   27           | • expression TOK_GR_EQUAL expression
   28           | • expression TOK_LS_EQUAL expression
   29           | • expression TOK_EQUAL expression
   30           | • expression TOK_N_EQUAL expression
   32           | • expression TOK_AND $@1 M expression
   34           | • expression TOK_OR $@2 M expression
   35           | • term
   36 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   37     | • TOK_MINUS expression
   38     | • TOK_NOT expression
   38     | TOK_NOT • expression
   39     | • TOK_DBL_PLUS lvalue
   40     | • lvalue TOK_DBL_PLUS
   41     | • TOK_DBL_MINUS lvalue
   42     | • lvalue TOK_DBL_MINUS
   43     | • primary
   44 primary: • lvalue
   45        | • call
   46        | • objectdef
   47        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   48        | • const
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   70 objectdef: • TOK_L_BR elist TOK_R_BR
   71          | • TOK_L_BR indexed TOK_R_BR
   81 const: • TOK_INT
   82      | • TOK_FLOAT
   83      | • TOK_STRING
   84      | • TOK_NIL
   85      | • TOK_TRUE
   86      | • TOK_FALSE

    TOK_NOT        shift, and go to state 12
    TOK_LOCAL      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_FALSE      shift, and go to state 15
    TOK_NIL        shift, and go to state 16
    TOK_MINUS      shift, and go to state 17
    TOK_DBL_PLUS   shift, and go to state 18
    TOK_DBL_MINUS  shift, and go to state 19
    TOK_L_BR       shift, and go to state 21
    TOK_L_PARENTH  shift, and go to state 22
    TOK_DBL_COLON  shift, and go to state 24
    TOK_ID         shift, and go to state 25
    TOK_INT        shift, and go to state 26
    TOK_FLOAT      shift, and go to state 27
    TOK_STRING     shift, and go to state 28

    assignexpr  go to state 30
    expression  go to state 59
    term        go to state 32
    primary     go to state 33
    lvalue      go to state 34
    member      go to state 35
    call        go to state 36
    objectdef   go to state 37
    const       go to state 41


State 13

   50 lvalue: TOK_LOCAL • TOK_ID

    TOK_ID  shift, and go to state 60


State 14

   85 const: TOK_TRUE •

    $default  reduce using rule 85 (const)


State 15

   86 const: TOK_FALSE •

    $default  reduce using rule 86 (const)


State 16

   84 const: TOK_NIL •

    $default  reduce using rule 84 (const)


State 17

   18 assignexpr: • lvalue TOK_ASSIGN expression
   19 expression: • assignexpr
   20           | • expression TOK_PLUS expression
   21           | • expression TOK_MINUS expression
   22           | • expression TOK_MULTIPLY expression
   23           | • expression TOK_DIVIDE expression
   24           | • expression TOK_MODULO expression
   25           | • expression TOK_GREATER expression
   26           | • expression TOK_LESS expression
   27           | • expression TOK_GR_EQUAL expression
   28           | • expression TOK_LS_EQUAL expression
   29           | • expression TOK_EQUAL expression
   30           | • expression TOK_N_EQUAL expression
   32           | • expression TOK_AND $@1 M expression
   34           | • expression TOK_OR $@2 M expression
   35           | • term
   36 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   37     | • TOK_MINUS expression
   37     | TOK_MINUS • expression
   38     | • TOK_NOT expression
   39     | • TOK_DBL_PLUS lvalue
   40     | • lvalue TOK_DBL_PLUS
   41     | • TOK_DBL_MINUS lvalue
   42     | • lvalue TOK_DBL_MINUS
   43     | • primary
   44 primary: • lvalue
   45        | • call
   46        | • objectdef
   47        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   48        | • const
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   70 objectdef: • TOK_L_BR elist TOK_R_BR
   71          | • TOK_L_BR indexed TOK_R_BR
   81 const: • TOK_INT
   82      | • TOK_FLOAT
   83      | • TOK_STRING
   84      | • TOK_NIL
   85      | • TOK_TRUE
   86      | • TOK_FALSE

    TOK_NOT        shift, and go to state 12
    TOK_LOCAL      shift, and go to state 13
    TOK_TRUE       shift, and go to state 14
    TOK_FALSE      shift, and go to state 15
    TOK_NIL        shift, and go to state 16
    TOK_MINUS      shift, and go to state 17
    TOK_DBL_PLUS   shift, and go to state 18
    TOK_DBL_MINUS  shift, and go to state 19
    TOK_L_BR       shift, and go to state 21
    TOK_L_PARENTH  shift, and go to state 22
    TOK_DBL_COLON  shift, and go to state 24
    TOK_ID         shift, and go to state 25
    TOK_INT        shift, and go to state 26
    TOK_FLOAT      shift, and go to state 27
    TOK_STRING     shift, and go to state 28

    assignexpr  go to state 30
    expression  go to state 61
    term        go to state 32
    primary     go to state 33
    lvalue      go to state 34
    member      go to state 35
    call        go to state 36
    objectdef   go to state 37
    const       go to state 41


State 18

   39 term: TOK_DBL_PLUS • lvalue
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall

    TOK_LOCAL      shift, and go to state 13
    TOK_L_PARENTH  shift, and go to state 62
    TOK_DBL_COLON  shift, and go to state 24
    TOK_ID         shift, and go to state 25

    lvalue  go to state 63
    member  go to state 35
    call    go to state 64


State 19

   41 term: TOK_DBL_MINUS • lvalue
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall

    TOK_LOCAL      shift, and go to state 13
    TOK_L_PARENTH  shift, and go to state 62
    TOK_DBL_COLON  shift, and go to state 24
    TOK_ID         shift, and go to state 25

    lvalue  go to state 65
    member  go to state 35
    call    go to state 64


State 20

   72 $@3: ε •
   73 block: TOK_L_CURLY_BR • $@3 statements TOK_R_CURLY_BR

    $default  reduce using rule 72 ($@3)

    $@3  go to state 66


State 21

   18 assignexpr: • lvalue TOK_ASSIGN expression
   19 expression: • assignexpr
   20           | • expression TOK_PLUS expression
   21           | • expression TOK_MINUS expression
   22           | • expression TOK_MULTIPLY expression
   23           | • expression TOK_DIVIDE expression
   24           | • expression TOK_MODULO expression
   25           | • expression TOK_GREATER expression
   26           | • expression TOK_LESS expression
   27           | • expression TOK_GR_EQUAL expression
   28           | • expression TOK_LS_EQUAL expression
   29           | • expression TOK_EQUAL expression
   30           | • expression TOK_N_EQUAL expression
   32           | • expression TOK_AND $@1 M expression
   34           | • expression TOK_OR $@2 M expression
   35           | • term
   36 term: • TOK_L_PARENTH expression TOK_R_PARENTH
   37     | • TOK_MINUS expression
   38     | • TOK_NOT expression
   39     | • TOK_DBL_PLUS lvalue
   40     | • lvalue TOK_DBL_PLUS
   41     | • TOK_DBL_MINUS lvalue
   42     | • lvalue TOK_DBL_MINUS
   43     | • primary
   44 primary: • lvalue
   45        | • call
   46        | • objectdef
   47        | • TOK_L_PARENTH funcdef TOK_R_PARENTH
   48        | • const
   49 lvalue: • TOK_ID
   50       | • TOK_LOCAL TOK_ID
   51       | • TOK_DBL_COLON TOK_ID
   52       | • member
   53 member: • lvalue TOK_DOT TOK_ID
   54       | • lvalue TOK_L_BR expression TOK_R_BR
   55       | • call TOK_DOT TOK_ID
   56       | • call TOK_L_BR expression TOK_R_BR
   57 call: • call normcall
   58     | • lvalue callsuffix
   59     | • TOK_L_PARENTH funcdef TOK_R_PARENTH normcall
   64 elist: • elist TOK_COMMA expression
   65      | • expression
   66      | ε •  [TOK_R_BR, TOK_COMMA]
   67 indexedelem: • TOK_L_CURLY_BR expression TOK_COLON expression TOK_R_CURLY_BR
   68 indexed: • indexedelem
   69        | • indexed TOK_COMMA indexedelem
   70 objectdef: • TOK_L_BR elist TOK_R_BR
   70          | TOK_L_BR • elist TOK_R_BR
   71          | • TOK_L_BR indexed TOK_R_BR
   71          | TOK_L_BR • indexed TOK_R_BR
   81 const: • TOK_INT
   82      | • TOK_FLOAT
   83      | • TOK_STRING
   84      | • TOK_NIL
   85      | • TOK_TRUE
   86      | • TOK_FALSE

    TOK_NOT         shift, and go to state 12
    TOK_LOCAL       shift, and go to state 13
    TOK_TRUE        shift, and go to state 14
    TOK_FALSE       shift, and go to state 15
    TOK_NIL         shift, and go to state 16
    TOK_MINUS       shift, and go to state 17
    TOK_DBL_PLUS    shift, and go to state 18
    TOK_DBL_MINUS   shift, and go to state 19
    TOK_L_CURLY_BR  shift, and go to state 67
    TOK_L_BR        shift, and go to state 21
    TOK_L_PARENTH   shift, and go to state 22
    TOK_DBL_COLON   shift, and go to state 24
    TOK_ID          shift, and go to state 25
    TOK_INT         shift, and go to state 26
    TOK_FLOAT       shift, and go to state 27
    TOK_STRING      shift, and go to state 28

    $default  reduce using rule 66 (elist)

    assignexpr   go to state 30
    expression   go to state 68
    term         go to state 32
    primary      go to state 33
    lvalue       go to state 34
    member       go to state 35
    call         go to state 36
    elist        go to state 69
    indexedelem  go to state 70
    indexed      go to state 71
    objectdef    go to state 37
    const        go to state 41


State 22
